expense-app/src/objects/Monthly_Expense__c.object
<CustomObject>
    <fields>
        <fullName>Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Keeper__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Keeper</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Monthly Expenses</relationshipLabel>
        <relationshipName>MonthlyExpenses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month_Date__c</fullName>
        <label>Month Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <formula>Balance__c - SpentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reminder</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SpentAmount__c</fullName>
        <label>Spent Amount</label>
        <summarizedField>Expense_Card__c.Amount__c</summarizedField>
        <summaryForeignKey>Expense_Card__c.MonthlyExpense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Monthly Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ME-{000000}</displayFormat>
        <label>Monthly Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>